--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "prod": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
     "start": "cross-env NODE_ENV=production webpack-dev-server --mode development --open",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "author": "gradam2001@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
+    "@types/jest": "^29.2.5",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "babel-loader": "^9.0.0",
@@ -28,6 +30,9 @@
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "netlify-webpack-plugin": "^1.1.3",
     "node-sass": "^7.0.3",
@@ -35,6 +40,7 @@
     "postcss-loader": "^7.0.1",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
